k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp
  namespace: go
spec:
  selector:
    app: go-webapp
  ports:
    - name: my-service
      protocol: TCP
      port: 8086
      targetPort: 8086
  type: LoadBalancer
